config/samples/components_v1alpha1_namespace.yaml
apiVersion: components.eks.amazonaws.com/v1alpha1
kind: Namespace
metadata:
  labels:
    controller-tools.k8s.io: "1.0"
  name: namespace-sample
spec:
  cluster: eks-sample
  name: sample
