config/samples/components_v1alpha1_statefulset.yaml
apiVersion: components.eks.amazonaws.com/v1alpha1
kind: StatefulSet
metadata:
  labels:
    controller-tools.k8s.io: "1.0"
  name: statefulset-sample
spec:
  # Add fields here
  cluster: eks-sample
  name: nginx-statefulset
  namespace: default
  selector:
    matchLabels:
      app: nginx-statefulset
  serviceName: "nginx-statefulset-service"
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-statefulset
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
